@@ -14,6 +14,7 @@ Release 0.19.2 - Unreleased
                (Lars George and Billy Pearson via Stack)
    HBASE-1350  New method in HTable.java to return start and end keys for
                regions in a table (Vimal Mathew via Stack)
+   HBASE-1058  Prevent runaway compactions
 
 Release 0.19.1 - 03/19/2009
   BUG FIXES
